--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
   provider: ^6.0.0
   share_plus: ^7.0.0
   flutter_launcher_icons: ^0.13.0
+  google_mobile_ads: ^6.0.0
+  google_fonts: ^6.3.1
+  flutter_animate: ^4.5.2
+  confetti: ^0.8.0
 
 dev_dependencies:
   flutter_test:
