Add assets, update ad config, expand excuses list
Added app icon to assets and referenced it in pubspec.yaml. Updated AndroidManifest.xml and home_screen.dart with new AdMob IDs. Expanded and categorized the excuses list in excuses.dart. Added devtools_options.yaml for Dart & Flutter DevTools configuration.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,13 @@
     <application
         android:label="excuse_generator"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
+
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-7253685603699909~1581151611"/>
+
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
